--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,6 @@
 	},
 	"require": {
 		"athlon1600/php-proxy": "^5.0",
-		"athlon1600/youtube-downloader": "^2.0",
-		"ext-mbstring": "*",
-		"php": ">=5.6.0"
+		"athlon1600/youtube-downloader": "^2.0"
 	}
 }
